refactor: Prefer Builder Pattern for GCSubmissionModel
Using a builder-pattern makes it easier to extend the API with
additional fields without the need to refactor all other usages.

Considered public constructors deprecated now.